# Nearby

./: Cargo.toml  Dioxus.toml  LICENSE  README.md
assets/: main.css
src/: main.rs
src/core/: create_identity.rs  db.rs  filereceiver.rs  filesender.rs  mod.rs
src/dioxus_component/: app.rs  mod.rs
src/dioxus_component/addressbook/: add_member.rs  addressbook.rs  friends.rs  mod.rs  whitelist.rs
src/dioxus_component/receive/: help.rs  history.rs  mod.rs  receive.rs
src/dioxus_component/receivefile/: mod.rs  receivefile.rs
src/dioxus_component/send/: friends_target_selection.rs  manual_target_selection.rs  mod.rs  send.rs
src/dioxus_component/settings/: history.rs  mod.rs  settings.rs
