[package]
name = "Nearby"
version = "0.1.0"
authors = ["Mohong <18550510975@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = [] }
dioxus-desktop = "0.6.0"
rfd = "0.14"
tokio = { version = "1", features = ["full"] }
dirs = "6.0.0"
rusqlite = "0.31.0"
rand = "0.8.5"
web-sys = "0.3.81"
arboard = "3.3.0"
log = "0.4.28"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
